--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -50,6 +50,7 @@
         <p style="display: none;" id="user_id">{{ request.user.id }}</p>
 
         <script src="/static/js/common/common.js"></script>
+        <script src="/static/js/common/updateMatches.js"></script>
         <script src="/static/js/teams/detail.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
