--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -51,6 +51,7 @@
 
         <script src="/static/js/common/common.js"></script>
         <script src="/static/js/common/updateMatches.js"></script>
+        <script src="/static/js/common/updateStatastics.js"></script>
         <script src="/static/js/teams/detail.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
