--- a/templates/matches/detail.html
+++ b/templates/matches/detail.html
@@ -75,6 +75,7 @@
         <script src="/static/js/matches/common/countdownTimer.js"></script>
         <script src="/static/js/matches/common/onPlayerSelectChange.js"></script>
         <script src="/static/js/matches/common/playerGroups.js"></script>
+        <script src="/static/js/matches/common/events.js"></script>
         <script src="/static/js/matches/detail.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
