--- a/templates/matches/tracker.html
+++ b/templates/matches/tracker.html
@@ -65,6 +65,7 @@
         <script src="/static/js/matches/common/countdownTimer.js"></script>
         <script src="/static/js/matches/common/onPlayerSelectChange.js"></script>
         <script src="/static/js/matches/common/playerGroups.js"></script>
+        <script src="/static/js/matches/common/events.js"></script>
         <script src="/static/js/matches/tracker.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
