--- a/templates/matches/players_selector.html
+++ b/templates/matches/players_selector.html
@@ -41,25 +41,29 @@
                         <p class="dm-sans-600-normal" style="font-size: 20px; margin: 0;">{{ player_group.starting_type.name }}</p>
                     </div>
                     <hr class="divider">
+                    <div id="{{ player_group.id_uuid }}" class="flex-column">
                     {% for player in player_group.players.all %}
-                        <div class="flex-row player">
+                        <div id="{{ player.id_uuid }}" class="flex-row player">
                             <img src={{ player.get_profile_picture }} alt="profile" class="profile_picture">
                             <p class="dm-sans-400-normal" style="margin-left: 16px;">{{ player.user.username|truncate_middle:20 }}</p>
                         </div>
                         <hr class="divider">
                     {% endfor %}
+                    </div>
                 {% endfor %}
                 
                 {% if substitutes %}
                     <div class="flex-row group-divider">
                         <p class="dm-sans-600-normal" style="font-size: 20px; margin: 0;">Wissels</p>
                     </div>
+                    <div id="subsitutes" class="flex-column">
                     {% for player in substitutes %}
-                        <div class="flex-row player">
+                        <div id="{{ player.id_uuid }}" class="flex-row player">
                             <img src={{ player.get_profile_picture }} alt="profile" class="profile_picture">
                             <p class="dm-sans-400-normal" style="margin-left: 16px;">{{ player.user.username|truncate_middle:20 }}</p>
                         </div>
                     {% endfor %}
+                    </div>
                 {% endif %}
             </div>
         </div>
@@ -67,6 +71,7 @@
         <p style="display: none;" id="user_id">{{ request.user.id }}</p>
 
         <script src="/static/js/common/truncateMiddle.js"></script>
+        <script src="/static/js/matches/players_selector.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
 </html>
